Vistas de lectura para clientes y categoria

--- a/src/View/inicioView.form
+++ b/src/View/inicioView.form
@@ -49,6 +49,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ListarCategoriasMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ListarCategoriasActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -91,6 +92,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ListarClientesMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ListarClientesActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
